# Fixed some code smells from sonar
Signed-off-by: immmus <fonto.trg@gmail.com>